Replace URL : cdn.cmds.run

--- a/web/base.html
+++ b/web/base.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>raw.githack.com</title>
+<title>cdn.cmds.run</title>
 <meta name="viewport" content="width=device-width">
-<meta name="description" content="raw.githack.com — CDN for your source code">
+<meta name="description" content="cdn.cmds.run — CDN for your source code">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:400,700">
-<link rel="stylesheet" href="//rawcdn.githack.com/neoascetic/rawgithack/98abbe9/web/rawgithack.css">
+<link rel="stylesheet" href="//raw.cmds.run/zkeq/rawgithack/98abbe9/web/rawgithack.css">
 
-<link rel="search" type="application/opensearchdescription+xml" href="//rawcdn.githack.com/neoascetic/rawgithack/4558441/opensearch.xml" title="raw.githack.com">
-<link rel="icon" href="//rawcdn.githack.com/neoascetic/rawgithack/679b0e7/web/img/sushi.png">
+<link rel="search" type="application/opensearchdescription+xml" href="//raw.cmds.run/zkeq/rawgithack/4558441/opensearch.xml" title="cdn.cmds.run">
+<link rel="icon" href="//raw.cmds.run/zkeq/rawgithack/679b0e7/web/img/sushi.png">
 
 <header class="hd">
   <h1 class="title">
-    <img class="logo" src="//rawcdn.githack.com/neoascetic/rawgithack/679b0e7/web/img/sushi.png">
-    <a href="/">raw.githack.com</a>
+    <img class="logo" src="//raw.cmds.run/zkeq/rawgithack/679b0e7/web/img/sushi.png">
+    <a href="/">cdn.cmds.run</a>
   </h1>
   <nav class="nav">
     <ul>
@@ -45,11 +45,11 @@ PLACEHOLDER
     <a href="/purge-cache">Purge cache</a>
     <a href="/faq#feedback">Report abuse</a>
     <a href="https://stats.uptimerobot.com/XAMJYh438n">Status page</a>
-    <a href="https://github.com/neoascetic/rawgithack">Source code</a>
+    <a href="https://github.com/zkeq/rawgithack">Source code</a>
   </p>
 </footer>
 
 
-<script defer src="//rawcdn.githack.com/cdnjs/cdnjs/0971b44/ajax/libs/fetch/2.0.1/fetch.min.js"></script>
-<script defer src="//rawcdn.githack.com/neoascetic/rawgithack/c162f69/web/rawgithack.js"></script>
+<script defer src="//raw.cmds.run/cdnjs/cdnjs/0971b44/ajax/libs/fetch/2.0.1/fetch.min.js"></script>
+<script defer src="//raw.cmds.run/zkeq/rawgithack/c162f69/web/rawgithack.js"></script>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "9fdcadef580f4335ad3c1e18bf166d0f"}'></script>
