--- a/web/faq.html
+++ b/web/faq.html
@@ -6,7 +6,7 @@
   <div id="who" class="question">
     <h2><a href="#who">Who runs this thing?</a></h2>
     <p>
-      Hi, I'm <a href="https://github.com/neoascetic">Pavel Puchkin</a>.
+      Hi, I'm <a href="https://github.com/zkeq">Pavel Puchkin</a>.
     </p>
   </div>
 
@@ -125,7 +125,7 @@
   <div id="feedback" class="question">
     <h2><a href="#feedback">I have feedback or want to report a bug! Who can I contact?</a></h2>
     <p>
-      To report a critical issue like raw.githack.com being broken, used to spread spam/copyright-protected content/etc or to share general feedback, <a href="mailto:i@neoascetic.me">send me a letter</a>. I try to respond quickly when I'm awake and near a computer, but sometimes I do have to sleep. To report a non-critical bug, please <a href="https://github.com/neoascetic/rawgithack/issues">file an issue</a>.
+      To report a critical issue like raw.githack.com being broken, used to spread spam/copyright-protected content/etc or to share general feedback, <a href="mailto:i@zkeq.me">send me a letter</a>. I try to respond quickly when I'm awake and near a computer, but sometimes I do have to sleep. To report a non-critical bug, please <a href="https://github.com/zkeq/rawgithack/issues">file an issue</a>.
     </p>
   </div>
 
