--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <p class="hero">
   <strong title="Content Delivery Network">CDN</strong> for your source code
-  <span class="desc"><strong>raw.githack.com</strong> serves files directly from your source code hosting with proper <strong>Content-Type</strong> headers</span>
+  <span class="desc"><strong>cdn.cmds.run</strong> serves files directly from your source code hosting with proper <strong>Content-Type</strong> headers</span>
 </p>
 
 <div class="url-helper">
@@ -15,9 +15,9 @@
   <div class="column">
     <h2>Use this URL in <strong>production</strong></h2>
     <p class="url-container">
-      <input id="url-prod" class="url" placeholder="https://rawcdn.githack.com/user/repo/tag/file" readonly tabindex="2">
+      <input id="url-prod" class="url" placeholder="https://raw.cmds.run/user/repo/tag/file" readonly tabindex="2">
       <button id="url-prod-copy" class="url-copy-button" data-clipboard-target="#url-prod" title="Copy URL" disabled>
-        <img src="//rawcdn.githack.com/neoascetic/rawgithack/4558441/clippy.svg" alt="">
+        <img src="//raw.cmds.run/zkeq/rawgithack/4558441/clippy.svg" alt="">
       </button>
     </p>
     <ul>
@@ -30,9 +30,9 @@
   <div class="column">
     <h2>Use this URL for <strong>development</strong></h2>
     <p class="url-container">
-      <input id="url-dev" class="url" placeholder="https://raw.githack.com/user/repo/branch/file" readonly tabindex="3">
+      <input id="url-dev" class="url" placeholder="https://raw-dev.cmds.run/user/repo/branch/file" readonly tabindex="3">
       <button id="url-dev-copy" class="url-copy-button" data-clipboard-target="#url-dev" title="Copy URL" disabled>
-        <img src="//rawcdn.githack.com/neoascetic/rawgithack/4558441/clippy.svg" alt="">
+        <img src="//raw.cmds.run/zkeq/rawgithack/4558441/clippy.svg" alt="">
       </button>
     </p>
     <ul>
@@ -42,5 +42,5 @@
   </div>
 </div>
 
-<script defer src="//rawcdn.githack.com/zenorocha/document.queryCommandSupported/v1.0.0/dist/queryCommandSupported.min.js"></script>
-<script defer src="//rawcdn.githack.com/zenorocha/clipboard.js/v1.5.10/dist/clipboard.min.js"></script>
+<script defer src="//raw.cmds.run/zenorocha/document.queryCommandSupported/v1.0.0/dist/queryCommandSupported.min.js"></script>
+<script defer src="//raw.cmds.run/zenorocha/clipboard.js/v1.5.10/dist/clipboard.min.js"></script>
