--- a/web/purge-cache.html
+++ b/web/purge-cache.html
@@ -8,7 +8,7 @@
 </p>
 
 <form method="POST" action="/purge" class="purge" id="purge-form">
-  <textarea required="true" name="files" placeholder="https://rawcdn.githack.com/user/repo/branch/file.ext"></textarea>
+  <textarea required="true" name="files" placeholder="https://raw.cmds.run/user/repo/branch/file.ext"></textarea>
   <input type="email" required="true" name="patron" placeholder="Your Patreon email">
   <div>
     <span class="wait">waiting</span>
@@ -18,4 +18,4 @@
   <input type="submit" value="Send purge request">
 </form>
 
-<script defer src="//rawcdn.githack.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
+<script defer src="//raw.cmds.run/jackmoore/autosize/master/dist/autosize.min.js"></script>
