--- a/web/base.html
+++ b/web/base.html
@@ -42,6 +42,7 @@ PLACEHOLDER
     <br>
     <a href="https://status.onmicrosoft.cn">Status page</a>
     <a href="https://github.com/neoascetic/rawgithack">Source code</a>
+    <a href="https://beian.miit.gov.cn" target="_blank" rel="noopener noreferrer">豫ICP备2022013147号-2</a>
   </p>
 </footer>
 
